--- a/moogStokesPar.cfg
+++ b/moogStokesPar.cfg
@@ -1,5 +1,5 @@
 parFileName = batch.par
-mode = synth
+mode = synstok
 atmos_dir = ./data/Atmospheres/
 model_in = MARCS_Solar.md
 atmosphere = 1
@@ -10,3 +10,4 @@ damping = 0
 freeform = 0
 synlimits_c = 0.005
 synlimits_d = 1.0
+diskflag = 1
