--- a/comparison.cfg
+++ b/comparison.cfg
@@ -1,21 +1,21 @@
 # Global Parameters
-Bfield = 0.0
+Bfield = 10.0
 deltav = 0.01
-vsini = 5.0
+vsini = 0.0
 Strong_FileName = ./MoogSandbox/strong.lines
 Weak_FileName = ./MoogSandbox/weak.lines
-wlStart = 11710
-wlStop = 11720
+wlStart = 4840.0
+wlStop = 4850.0
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = ./data/AbsorptionLines/VALD/lines.strong
-VALD_file = ./data/AbsorptionLines/VALD/vald_master.txt
+VALD_file = ./data/AbsorptionLines/VALD/comparison.dat
 molecules = ./data/AbsorptionLines/Molecular/
 gf_file = ./data/AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
 
 # Parameters for the Moog .par file
-moog_Parameters = moogStokesPar.cfg
+moog_Parameters = compPar.cfg
 
 
 # Parameters for observed spectra
