--- a/compPar.cfg
+++ b/compPar.cfg
@@ -1,7 +1,8 @@
 parFileName = batch.par
 mode = synstok
 atmos_dir = ./data/Atmospheres/
-model_in = MARCS_Solar.md
+model_in = MARCS_T7500_G4.0_M0.0_t1.0.md
+#model_in = MARCS_Solar.md
 atmosphere = 1
 strong = 1
 molecules = 2
@@ -11,3 +12,4 @@ freeform = 0
 synlimits_c = 0.005
 synlimits_d = 1.0
 diskflag = 1
+testflag = 1
