--- a/compPar.cfg
+++ b/compPar.cfg
@@ -1,7 +1,9 @@
 parFileName = batch.par
 mode = synstok
+#mode = synth
 atmos_dir = ./data/Atmospheres/
 model_in = MARCS_T7500_G4.0_M0.0_t1.0.md
+#model_in = kurucz_atlas9_v0.mod
 #model_in = MARCS_Solar.md
 atmosphere = 1
 strong = 1
