getting much closer

--- a/MoogStokesPar.cfg
+++ b/MoogStokesPar.cfg
@@ -1,10 +1,6 @@
 parFileName = batch.par
 mode = synstok
-#mode = synth
-atmos_dir = ./data/Atmospheres/
-model_in = MARCS_T7500_G4.0_M0.0_t1.0.md
-#model_in = kurucz_atlas9_v0.mod
-#model_in = MARCS_Solar.md
+atmos_dir = ./data/Atmospheres/MARCS/
 atmosphere = 1
 strong = 1
 molecules = 2
@@ -14,4 +10,4 @@ freeform = 0
 synlimits_c = 0.005
 synlimits_d = 1.0
 diskflag = 1
-testflag = 1
+testflag = 0
