--- a/StokesExample.cfg
+++ b/StokesExample.cfg
@@ -1,11 +1,14 @@
 # Global Parameters
 Bfield = 0.0
+Teff = 4000
+logg = 4.5
 deltav = 0.01
-vsini = 10.0
+vsini = 0.0
 Strong_FileName = ./MoogSandbox/strong.lines
 Weak_FileName = ./MoogSandbox/weak.lines
-wlStart = 11710
-wlStop = 11720
+wlStart = 22040
+wlStop = 22070
+grid = True
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = ./data/AbsorptionLines/VALD/lines.strong
@@ -15,8 +18,12 @@ gf_file = ./data/AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
 
 # Parameters for the Moog .par file
-moog_Parameters = moogStokesPar.cfg
+moog_Parameters = MoogStokesPar.cfg
 
 
 # Parameters for observed spectra
 solar_datafile = ./data/ObservedSpectra/Livingston_Solar/solar_spectrum.out
+
+# Parameters for saving the output
+outbase = StokesExample
+outdir = ./Output/
