--- a/TraceStokes.cfg
+++ b/TraceStokes.cfg
@@ -1,22 +1,30 @@
 # Global Parameters
-Bfield = 20.0
+Bfield = 1.0
+Teff = 4000
+logg = 4.5
 deltav = 0.01
-vsini = 0.0
+vsini = 10.0
 Strong_FileName = ./MoogSandbox/strong.lines
 Weak_FileName = ./MoogSandbox/weak.lines
-wlStart = 4920.0
-wlStop = 4930.0
+wlStart = 22040.29
+wlStop = 22070.00
+wlProbe = 22046.29
+grid = True
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = ./data/AbsorptionLines/VALD/lines.strong
-VALD_file = ./data/AbsorptionLines/VALD/comparison.dat
+VALD_file = ./data/AbsorptionLines/VALD/vald_master.txt
 molecules = ./data/AbsorptionLines/Molecular/
 gf_file = ./data/AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
 
 # Parameters for the Moog .par file
-moog_Parameters = compPar.cfg
+moog_Parameters = traceStokesPar.cfg
 
 
 # Parameters for observed spectra
 solar_datafile = ./data/ObservedSpectra/Livingston_Solar/solar_spectrum.out
+
+# Parameters for saving the output
+outbase = Stokes_DipStick
+outdir = ./Output/
