--- a/traceStokesPar.cfg
+++ b/traceStokesPar.cfg
@@ -1,8 +1,6 @@
 parFileName = batch.par
-mode = synstok
-atmos_dir = ./data/Atmospheres/
-model_in = MARCS_Solar.md
-#model_in = MARCS_T7500_G4.0_M0.0_t1.0.md
+mode = stoktra
+atmos_dir = ./data/Atmospheres/MARCS/
 atmosphere = 1
 strong = 1
 molecules = 2
