--- a/MoogStokesPar.cfg
+++ b/MoogStokesPar.cfg
@@ -1,6 +1,6 @@
 parFileName = batch.par
 mode = synstok
-atmos_dir = ./data/Atmospheres/MARCS/
+atmos_dir = Atmospheres/MARCS/
 atmosphere = 1
 strong = 1
 molecules = 2
