--- a/StokesExample.cfg
+++ b/StokesExample.cfg
@@ -11,10 +11,10 @@ grid = True
 deltav = 0.01
 
 # Atomic and Molecular line files for generating Moog line lists
-strong_file = ./data/AbsorptionLines/VALD/lines.strong
-VALD_file = ./data/AbsorptionLines/VALD/vald_master.txt
-molecules = ./data/AbsorptionLines/Molecular/
-gf_file = ./data/AbsorptionLines/corrections/corrected_lines.dat
+strong_file = AbsorptionLines/VALD/lines.strong
+VALD_file = AbsorptionLines/VALD/vald_master.txt
+molecules = AbsorptionLines/Molecular/
+gf_file = AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
 
 # Parameters for the Moog .par file
@@ -22,7 +22,7 @@ moog_Parameters = MoogStokesPar.cfg
 
 
 # Parameters for observed spectra
-solar_datafile = ./data/ObservedSpectra/Livingston_Solar/solar_spectrum.out
+solar_datafile = ObservedSpectra/Livingston_Solar/solar_spectrum.out
 
 # Parameters for saving the output
 outbase = StokesExample
