--- a/moogPar.cfg
+++ b/moogPar.cfg
@@ -1,6 +1,6 @@
 parFileName = batch.par
 mode = synth
-atmos_dir = ./data/Atmospheres/
+atmos_dir = Atmospheres/
 model_in = MARCS_Solar.md
 atmosphere = 1
 strong = 1
