--- a/moogPy.cfg
+++ b/moogPy.cfg
@@ -6,10 +6,10 @@ wlStart = 11710
 wlStop = 11720
 
 # Atomic and Molecular line files for generating Moog line lists
-strong_file = ./data/AbsorptionLines/VALD/lines.strong
-VALD_file = ./data/AbsorptionLines/VALD/vald_master.txt
-molecules = ./data/AbsorptionLines/Molecular/
-gf_file = ./data/AbsorptionLines/corrections/corrected_lines.dat
+strong_file = AbsorptionLines/VALD/lines.strong
+VALD_file = AbsorptionLines/VALD/vald_master.txt
+molecules = AbsorptionLines/Molecular/
+gf_file = AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
 
 # Parameters for the Moog .par file
@@ -17,4 +17,4 @@ moog_Parameters = moogPar.cfg
 
 
 # Parameters for observed spectra
-solar_datafile = ./data/ObservedSpectra/Livingston_Solar/solar_spectrum.out
+solar_datafile = ObservedSpectra/Livingston_Solar/solar_spectrum.out
