--- a/StokesExample.cfg
+++ b/StokesExample.cfg
@@ -1,5 +1,5 @@
 # Global Parameters
-Bfield = 2.0
+Bfield = 0.0
 Teff = 3600
 logg = 4.0
 vsini = 5.0
@@ -12,10 +12,12 @@ deltav = 0.01
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = AbsorptionLines/VALD/lines.strong
-VALD_file = AbsorptionLines/VALD/vald_master.txt
+#VALD_file = AbsorptionLines/VALD/vald_master.txt
+VALD_file = AbsorptionLines/VALD/Kband/Kband
 molecules = AbsorptionLines/Molecular/
 gf_file = AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
+applyCorrections = True
 
 # Parameters for the Moog .par file
 moog_Parameters = MoogStokesPar.cfg
