--- a/StokesExample.cfg
+++ b/StokesExample.cfg
@@ -12,8 +12,7 @@ deltav = 0.01
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = AbsorptionLines/VALD/lines.strong
-#VALD_file = AbsorptionLines/VALD/vald_master.txt
-VALD_file = AbsorptionLines/VALD/Kband/Kband
+VALD_file = AbsorptionLines/VALD/vald_master.txt
 molecules = AbsorptionLines/Molecular/
 gf_file = AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
