Replaced pyfits with astropy.io.fits in SpectralTools

--- a/TraceStokes.cfg
+++ b/TraceStokes.cfg
@@ -17,6 +17,7 @@ VALD_file = AbsorptionLines/VALD/vald_master.txt
 molecules = AbsorptionLines/Molecular/
 gf_file = AbsorptionLines/corrections/corrected_lines.dat
 doMolecules = False
+applyCorrections = True
 
 # Parameters for the Moog .par file
 moog_Parameters = traceStokesPar.cfg
