added Examiner.py to look at disk-averaged spectra

--- a/StokesExample.cfg
+++ b/StokesExample.cfg
@@ -12,9 +12,9 @@ deltav = 0.01
 
 # Atomic and Molecular line files for generating Moog line lists
 strong_file = AbsorptionLines/VALD/lines.strong
-VALD_file = AbsorptionLines/VALD/vald_master.txt
+VALD_file = AbsorptionLines/VALD/Kband/Kband
 molecules = AbsorptionLines/Molecular/
-gf_file = AbsorptionLines/corrections/corrected_lines.dat
+gf_file = AbsorptionLines/corrections/compositeCorrected.dat
 doMolecules = False
 applyCorrections = True
 
